--- a/app/src/main/res/layout/activity_admin_res_detalles_pedidos.xml
+++ b/app/src/main/res/layout/activity_admin_res_detalles_pedidos.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminResDetallesPedidosActivity">
+    tools:context=".activity.adminRes.AdminResDetallesPedidosActivity">
 
     <LinearLayout
         android:layout_width="409dp"
