--- a/app/src/main/res/layout/activity_cliente_producto.xml
+++ b/app/src/main/res/layout/activity_cliente_producto.xml
@@ -5,93 +5,97 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.cliente.ClienteProductoActivity">
+    tools:context=".activity.cliente.ClienteProductoActivity"
+    android:background="@color/bg_color">
 
 
     <!-- Contenido desplazable -->
-    <ScrollView
-        android:id="@+id/scrollViewContent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/containerBottom">
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <!-- Botones con imagen del prodcuto-->
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <!-- Imagen del producto -->
-            <RelativeLayout
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/productDetailImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="250dp"
+                android:scaleType="centerCrop"
+                app:shapeAppearanceOverlay="@style/RoundedBottomCornersShape"
+                android:alpha="0.95"/>
 
-                <!-- Imagen -->
-                <ImageView
-                    android:id="@+id/productDetailImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:scaleType="centerCrop" />
-
-                <!-- Botón de regresar (flecha) -->
-                <Button
-                    style="?attr/materialIconButtonFilledTonalStyle"
-                    android:id="@+id/btnBack"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_margin="16dp"
-                    app:icon="@drawable/baseline_arrow_back_ios_new_24"
-                    android:contentDescription="regresar"/>
-
-                <!-- Botón de carrito de compras -->
-                <Button
-                    style="?attr/materialIconButtonFilledStyle"
-                    android:id="@+id/btnCart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_margin="16dp"
-                    app:icon="@drawable/outline_shopping"
-                    android:contentDescription="carrito"/>
-
-                <!-- Indicador de cantidad en el carrito -->
-                <TextView
-                    android:id="@+id/tvCartItemCount"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_alignTop="@id/btnCart"
-                    android:layout_alignEnd="@id/btnCart"
-                    android:background="@drawable/circle_bg"
-                    android:text="@string/cantProducts"
-                    android:textColor="@android:color/white"
-                    android:textSize="6sp"
-                    android:padding="4dp" />
-            </RelativeLayout>
-
-            <!-- Nombre del producto   -->
-            <TextView
-                android:id="@+id/productDetailName"
-                android:layout_width="match_parent"
+            <!-- Botón de regresar (flecha) -->
+            <Button
+                style="?attr/materialIconButtonFilledTonalStyle"
+                android:id="@+id/btnBack"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:paddingTop="16dp"
-                android:paddingLeft="12dp"/>
+                android:layout_alignParentStart="true"
+                android:layout_margin="12dp"
+                app:icon="@drawable/baseline_arrow_back_ios_new_24"
+                android:contentDescription="@string/btnBack"
+                app:iconTint="@color/black"
+                android:backgroundTint="@color/bg_color"/>
 
-            <!-- Descripción del producto   -->
-            <TextView
-                android:id="@+id/tvDescripcionProduct"
-                android:layout_width="match_parent"
+            <!-- Botón de carrito de compras -->
+            <Button
+                style="?attr/materialIconButtonFilledStyle"
+                android:id="@+id/btnCart"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="12dp"
-                android:text="La Classic Burger es una jugosa hamburguesa de res a la parrilla, servida en un pan brioche suave, con queso cheddar derretido, lechuga fresca, tomate, cebolla caramelizada y una salsa especial de la casa."
-                android:textAlignment="viewStart"
-                android:textAllCaps="false"
-                android:layout_marginBottom="6dp"/>
-        </LinearLayout>
+                android:layout_alignParentEnd="true"
+                android:layout_margin="12dp"
+                app:icon="@drawable/outline_shopping"
+                android:backgroundTint="@color/black"
+                android:contentDescription="@string/btnCarrito"/>
+
+            <!-- Indicador de cantidad en el carrito -->
+            <TextView
+                android:id="@+id/tvCartItemCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@id/btnCart"
+                android:layout_alignEnd="@id/btnCart"
+                android:background="@drawable/circle_bg"
+                android:text="@string/cantProducts"
+                android:textColor="@android:color/white"
+                android:textSize="12sp"
+                android:gravity="center"
+                android:paddingHorizontal="4dp"
+                android:minWidth="16dp"
+                android:minHeight="16dp"/>
+        </RelativeLayout>
+
+        <!-- Nombre del producto   -->
+        <TextView
+            android:id="@+id/productDetailName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/sen_font"
+            android:padding="16dp"
+            android:textColor="@color/black" />
+
+        <!-- Descripción del producto   -->
+        <TextView
+            android:id="@+id/tvDescripcionProduct"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="16dp"
+            android:textSize="14sp"
+            android:text="La Classic Burger es una jugosa hamburguesa de res a la parrilla, servida en un pan brioche suave, con queso cheddar derretido, lechuga fresca, tomate, cebolla caramelizada y una salsa especial de la casa."
+            android:textAlignment="viewStart"/>
+    </LinearLayout>
 
 
-    </ScrollView>
+
 
     <!-- Contenedor del precio, botones de cantidad y "Añadir al carrito", ubicado en la parte inferior -->
     <LinearLayout
@@ -101,8 +105,7 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
         android:padding="16dp"
-        android:background="@android:color/white"
-        android:elevation="8dp">
+        android:background="@drawable/rounded_top">
 
         <!-- Contenedor del precio y botones de cantidad -->
         <LinearLayout
@@ -110,13 +113,12 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="8dp"
-            android:elevation="4dp"
             android:gravity="center_vertical">
 
             <!-- Precio -->
             <TextView
                 android:id="@+id/productDetailPrice"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="S/. 32"
                 android:textSize="24sp"
@@ -129,9 +131,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:background="@drawable/search_view_bg"
-                android:padding="4dp"
-                android:elevation="2dp">
+                android:background="@drawable/rounded_box"
+                android:padding="4dp">
 
                 <!-- Botón de menos -->
                 <Button
@@ -140,7 +141,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:icon="@drawable/baseline_remove_24"
-                    android:contentDescription="Decrementar cantidad" />
+                    android:contentDescription="Disminuir cantidad" />
 
                 <!-- Texto para mostrar la cantidad -->
                 <TextView
@@ -171,10 +172,10 @@
             android:layout_height="wrap_content"
             android:text="AÑADIR AL CARRITO"
             android:textSize="18sp"
-            android:backgroundTint="@android:color/holo_red_light"
+            android:backgroundTint="@color/btn_medium"
             android:textColor="@android:color/white"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="14dp"
             android:padding="16dp"
             android:textStyle="bold"/>
     </LinearLayout>
