--- a/app/src/main/res/layout/item_producto_carrito.xml
+++ b/app/src/main/res/layout/item_producto_carrito.xml
@@ -3,104 +3,121 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:padding="8dp"
-    android:gravity="center_vertical">
+    android:orientation="vertical"
+    android:paddingHorizontal="16dp">
 
-    <!-- Imagen del producto -->
-    <ImageView
-        android:id="@+id/productImage"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/burger" />
-
-    <!-- Información del producto -->
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        android:paddingStart="8dp">
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
 
-        <!-- Nombre del producto -->
-        <TextView
-            android:id="@+id/productName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hamburguesa casera"
-            android:textSize="16sp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold" />
+        <!-- Imagen del producto -->
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/productImage"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/burger"
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundedCorners16dp"/>
 
-
-        <!-- Precio del producto y botones de cantidad -->
+        <!-- Información del producto -->
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:paddingStart="8dp">
 
-            <!-- Precio del producto -->
+            <!-- Nombre del producto -->
             <TextView
-                android:id="@+id/productPrice"
+                android:id="@+id/productName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="S/. 64"
+                android:text="Hamburguesa casera"
                 android:textSize="16sp"
                 android:textColor="@android:color/white"
                 android:textStyle="bold" />
 
-            <!-- Botones de cantidad -->
+
+            <!-- Precio del producto y botones de cantidad -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingStart="8dp">
+                android:gravity="center_vertical">
 
-                <!-- Botón de menos -->
-                <Button
-                    android:id="@+id/btnMinus"
-                    style="?attr/materialIconButtonFilledTonalStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="Decrementar cantidad"
-                    app:icon="@drawable/baseline_remove_24"
-                    android:scaleX="0.7"
-                    android:scaleY="0.7"/>
-
-                <!-- Cantidad -->
+                <!-- Precio del producto -->
                 <TextView
-                    android:id="@+id/tvQuantity"
+                    android:id="@+id/productPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2"
-                    android:paddingHorizontal="8dp"
+                    android:text="S/. 64"
                     android:textSize="16sp"
-                    android:textColor="@android:color/white" />
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold" />
 
-                <!-- Botón de más -->
-                <Button
-                    style="?attr/materialIconButtonFilledTonalStyle"
-                    android:id="@+id/btnPlus"
+                <!-- Botones de cantidad -->
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:icon="@drawable/baseline_add_24"
-                    android:contentDescription="Incrementar cantidad"
-                    android:scaleX="0.7"
-                    android:scaleY="0.7"/>
+                    android:orientation="horizontal"
+                    android:paddingStart="8dp">
+
+                    <!-- Botón de menos -->
+                    <Button
+                        android:id="@+id/btnMinus"
+                        style="?attr/materialIconButtonFilledTonalStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="Decrementar cantidad"
+                        app:icon="@drawable/baseline_remove_24"
+                        android:scaleX="0.7"
+                        android:scaleY="0.7"/>
+
+                    <!-- Cantidad -->
+                    <TextView
+                        android:id="@+id/tvQuantity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="2"
+                        android:paddingHorizontal="8dp"
+                        android:textSize="16sp"
+                        android:textColor="@android:color/white" />
+
+                    <!-- Botón de más -->
+                    <Button
+                        style="?attr/materialIconButtonFilledTonalStyle"
+                        android:id="@+id/btnPlus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:icon="@drawable/baseline_add_24"
+                        android:contentDescription="Incrementar cantidad"
+                        android:scaleX="0.7"
+                        android:scaleY="0.7"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+
+        <!-- Botón de eliminar -->
+        <Button
+            style="?attr/materialIconButtonFilledStyle"
+            android:id="@+id/btnDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon="@drawable/baseline_close_24"
+            android:backgroundTint="@color/btn_dark"
+            android:contentDescription="Eliminar producto"
+            android:scaleX="0.7"
+            android:scaleY="0.7"/>
+
+
     </LinearLayout>
 
-    <!-- Botón de eliminar -->
-    <Button
-        style="?attr/materialIconButtonFilledStyle"
-        android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:icon="@drawable/baseline_close_24"
-        android:contentDescription="Eliminar producto"
-        android:scaleX="0.7"
-        android:scaleY="0.7"/>
+    <!-- Divisor entre ítems -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/gray_dark"/>
 </LinearLayout>
