--- a/app/src/main/res/layout/item_restaurant_repartidor_main.xml
+++ b/app/src/main/res/layout/item_restaurant_repartidor_main.xml
@@ -1,45 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="16dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    android:orientation="vertical"
+    android:paddingHorizontal="16dp"
+    android:layout_marginBottom="36dp">
+
+
+    <!-- Imagen del restaurante con bordes curvados -->
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/ivImagenRestaurante"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/imgRest"
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundedCorners16dp"
+        android:layout_marginBottom="8dp" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/ivImagenRestaurante"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:background="@color/black"
-            />
 
         <TextView
             android:id="@+id/tvNombreRestaurante"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nombre Restaurante"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:text="@string/nameRest"
+            android:fontFamily="@font/sen_font"
+            android:paddingHorizontal="4dp"/>
 
         <TextView
             android:id="@+id/tvDireccionRestaurante"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_location"
             android:layout_marginTop="4dp"
-            android:drawablePadding="4dp"
             android:text="Dirección Restaurante"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="14sp" />
+            android:textColor="@color/gray"
+            android:fontFamily="@font/sen_font"
+            android:textSize="14sp"
+            app:drawableStartCompat="@drawable/ic_location"
+            android:gravity="center_vertical"
+            android:drawableTint="#FFFF4444"/>
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+    <!-- Divisor entre ítems -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/gray_light"/>
+
+</LinearLayout>
