feat: repartidor - recycle view de ver orden (fala considerar tamaños de los cuadros y bottom sheet)

--- a/app/src/main/res/layout/activity_repartidor_ver_orden.xml
+++ b/app/src/main/res/layout/activity_repartidor_ver_orden.xml
@@ -1,4 +1,5 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -163,24 +164,23 @@
             android:layout_height="wrap_content"
             android:text="DETALLES DEL PEDIDO"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/customerLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="24dp" />
-
-        <!-- RecyclerView para Detalles del pedido -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/orderItemsRecyclerView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/destinationsContainer"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/containerBottom"/>
-
+            android:layout_marginTop="24dp"
+            android:textColor="@color/text_secondary" />
     </LinearLayout>
+
+    <!-- RecyclerView para Detalles del pedido -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/orderItemsRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/destination_background"
+        app:layout_constraintTop_toBottomOf="@id/destinationsContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/containerBottom"/>
 
     <!-- Sección de botones abajo -->
     <LinearLayout
