--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -1,45 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:padding="8dp">
 
+    <!-- Imagen del producto -->
     <ImageView
         android:id="@+id/ivItemImage"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:scaleType="centerCrop"
+        android:layout_marginEnd="8dp"
+        android:paddingEnd="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="RtlSymmetry" />
 
+    <!-- Nombre del producto -->
     <TextView
         android:id="@+id/tvItemName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:layout_marginStart="16dp"
+        android:textColor="@android:color/black"
         app:layout_constraintStart_toEndOf="@id/ivItemImage"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/tvItemQuantity" />
+        app:layout_constraintEnd_toStartOf="@id/tvItemQuantity"
+        android:layout_marginEnd="16dp" />
 
+    <!-- Tamaño del producto -->
     <TextView
         android:id="@+id/tvItemSize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
-        android:layout_marginTop="4dp"
+        android:textColor="@android:color/darker_gray"
         app:layout_constraintStart_toStartOf="@id/tvItemName"
-        app:layout_constraintTop_toBottomOf="@id/tvItemName" />
+        app:layout_constraintTop_toBottomOf="@id/tvItemName"
+        android:layout_marginTop="4dp" />
 
+    <!-- Círculo de cantidad -->
     <TextView
         android:id="@+id/tvItemQuantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:background="@drawable/circle_bg"
+        android:text="2"
+        android:textSize="14sp"
         android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
