--- a/app/src/main/res/layout/activity_super_admin_gestion_administradores.xml
+++ b/app/src/main/res/layout/activity_super_admin_gestion_administradores.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_color"
-    tools:context=".activity.superadmin.SuperAdminGestionUsuariosActivity">
+    tools:context=".activity.superadmin.SuperAdminGestionAdministradoresActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Gestión de Clientes"
+                android:text="Gestión de Administradores"
                 android:textSize="20sp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/sen_font"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="8dp"
             android:layout_marginHorizontal="16dp"
-            app:queryHint="Buscar clientes"
+            app:queryHint="Buscar Administradores"
             app:iconifiedByDefault="false"
             android:background="@drawable/search_view_bg"/>
 
@@ -107,4 +107,5 @@
 
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
