--- a/app/src/main/res/layout/activity_super_admin_gestion_restaurante.xml
+++ b/app/src/main/res/layout/activity_super_admin_gestion_restaurante.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_color"
-    tools:context=".activity.superadmin.SuperAdminGestionUsuariosActivity">
+    tools:context=".activity.superadmin.SuperAdminGestionRestauranteActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +28,6 @@
                 android:contentDescription="@string/app_name"
                 app:srcCompat="@drawable/foodisea" />
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -52,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Gestión de Clientes"
+                android:text="Gestion de Restaurantes"
                 android:textSize="20sp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/sen_font"
@@ -69,7 +68,6 @@
                 android:backgroundTint="@color/btn_medium"/>
         </LinearLayout>
 
-
         <!-- Barra de búsqueda -->
         <androidx.appcompat.widget.SearchView
             android:id="@+id/svRestaurants"
@@ -77,20 +75,9 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="8dp"
             android:layout_marginHorizontal="16dp"
-            app:queryHint="Buscar clientes"
+            app:queryHint="Buscar Restaurante"
             app:iconifiedByDefault="false"
             android:background="@drawable/search_view_bg"/>
-
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvUsers"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight="1"
-            android:paddingHorizontal="16dp"
-            tools:listitem="@layout/item_user" />
 
         <!-- FloatingActionButton en la parte inferior izquierda -->
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -105,6 +92,19 @@
             app:tint="@android:color/white"
             android:contentDescription="Agregar nuevo producto"/>
 
+        <!-- Lista de restaurantes -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvRestaurants"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="false" />
+
+
+
+
+
 
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
