--- a/app/src/main/res/layout/activity_super_admin_selection.xml
+++ b/app/src/main/res/layout/activity_super_admin_selection.xml
@@ -53,6 +53,7 @@
             android:gravity="center_horizontal">
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/btnRestaurantes"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
@@ -92,6 +93,7 @@
 
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/btnAdministradores"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
@@ -134,6 +136,7 @@
             android:layout_marginTop="4dp">
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/btnRepartidores"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="8dp"
