Cliente: enviar rating y descripción al restaurante + nuevos datos

--- a/app/src/main/res/layout/activity_super_admin_gestion_restaurante.xml
+++ b/app/src/main/res/layout/activity_super_admin_gestion_restaurante.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -79,32 +79,30 @@
             app:iconifiedByDefault="false"
             android:background="@drawable/search_view_bg"/>
 
-        <!-- FloatingActionButton en la parte inferior izquierda -->
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btnDashboard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="20dp"
-            android:clickable="true"
-            android:backgroundTint="@color/btn_dark"
-            android:src="@drawable/ic_add"
-            app:tint="@android:color/white"
-            android:contentDescription="Agregar nuevo producto"/>
 
         <!-- Lista de restaurantes -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvRestaurants"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:nestedScrollingEnabled="false" />
-
-
-
-
+            android:nestedScrollingEnabled="false"
+            android:layout_marginTop="20dp"/>
 
 
     </LinearLayout>
 
+    <!-- FloatingActionButton en la parte inferior izquierda -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnDashboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="20dp"
+        android:clickable="true"
+        android:backgroundTint="@color/btn_dark"
+        android:src="@drawable/ic_add"
+        app:tint="@android:color/white"
+        android:contentDescription="Agregar nuevo producto"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
