Add: pase de info de los botones de pedidos a detalles de pedidos en admin res

--- a/app/src/main/res/layout/botton_sheet_admin_res_pedidos.xml
+++ b/app/src/main/res/layout/botton_sheet_admin_res_pedidos.xml
@@ -161,6 +161,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/buttonVerDetalles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="VER DETALLES DE COMPRA"
