--- a/app/src/main/res/layout/activity_admin_res_detalles_pedidos.xml
+++ b/app/src/main/res/layout/activity_admin_res_detalles_pedidos.xml
@@ -415,6 +415,7 @@
                         android:background="@drawable/rounded_box"
                         android:orientation="horizontal">
                         <TextView
+                            android:id="@+id/metodoPago"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -429,6 +430,7 @@
                             android:textColor="@android:color/darker_gray"
                             android:textSize="16sp" />
                         <TextView
+                            android:id="@+id/estadoPago"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
